banner animation; fix blog adaptive - no whitespace

--- a/src/module/blog_page/presentation/BlogHearers.module.css
+++ b/src/module/blog_page/presentation/BlogHearers.module.css
@@ -1,15 +1,12 @@
 
-.headers_container {
+.header_container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: auto;
     border: rgba(0, 0, 0, 0.1) solid 1px;
     border-radius: 10px;
+    min-width: 315px;
     max-width: 1290px;
-
-}
-.headers_container span {
-    height: fit-content;
 }
 
 .left_header {
@@ -33,8 +30,6 @@
     display: grid;
     grid-template-columns: 1fr;
 }
-
-
 
 .right_header_col {
     width: 644px;
@@ -90,25 +85,80 @@
     opacity: 0.7;
 }
 
+@media (max-width: 644px) {
+    .header_container {
+        grid-template-columns:none;
+        border: none;
+    }
+    .left_header {
+        width: 315px;
+        height: 260px;
+        padding: 0 0 0 10px;
+        border: rgba(0, 0, 0, 0.1) solid 1px;
+        border-bottom: none;
+        border-radius: 10px 10px 0 0;
+        align-content: center;
+    }
+    .big_text_header {
+        font-size: 26px;
+        line-height: 34px;
+        letter-spacing: -0.8px;
+        text-transform: uppercase;
+    }
+    .btn_read_more {
+        margin: 20px 0 20px 0;
+    }
+
+    .right_header {
+        width: 315px;
+        height: min-content;
+        border: rgba(0, 0, 0, 0.1) solid 1px;
+        border-radius: 0 0 10px 10px;
+        align-content: center;
+    }
+    .right_header_col {
+        width: 314px;
+        display: grid;
+        align-content: normal;
+    }
+    .right_header_item {
+        width: 145px;
+        margin-top: 0;
+        padding: 30px 0 0 10px;
+        letter-spacing: -0.8px;
+        display: grid;
+        grid-template-columns: 1fr;
+        align-content: space-between;
+    }
+    .right_header_item > h3 {
+        font-size: 18px;
+    }
+    .right_header_col:first-child {
+        border-bottom: rgba(100, 50, 120, 0.1) solid 1px;
+    }
+}
 
 
 /* Mobile Devices */
-@media (max-width: 767px) {
-
+@media (min-width: 411px) and (max-width: 644px) {
     .left_header {
-        border-right: none;
+        width: 410px;
+    }
+    .right_header_col {
+        width: 409px;
     }
     .right_header {
-        border-top:  rgba(0, 0, 0, 0.1) solid 1px;
+        width: 410px;
     }
-    .headers_container {
-        width: 644px;
-        grid-template-columns: 1fr;
+    .right_header_item {
+        width: 195px;
+        padding-bottom: 30px;
     }
 }
 
 /* Tablets */
-@media (min-width: 768px) and (max-width: 1023px) {
+/*@media (min-width: 768px) and (max-width: 1023px) {*/
+@media (min-width: 645px) and (max-width: 1290px) {
     .left_header {
         border-right: none;
     }
@@ -116,14 +166,14 @@
     .right_header {
         border-top:  rgba(0, 0, 0, 0.1) solid 1px;
     }
-    .headers_container {
+    .header_container {
         width: 644px;
         grid-template-columns: 1fr;
     }
 }
 
 /* Desktops and Laptops */
-@media (min-width: 1024px) {
+@media (min-width: 1291px) {
 
 }
 
