--- a/src/module/blog_page/presentation/BlogPage.module.css
+++ b/src/module/blog_page/presentation/BlogPage.module.css
@@ -2,6 +2,15 @@
 
 }
 
+.main{
+    margin-top: 30px;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: -0.3px;
+    color: rgba(0, 0, 0, 0.3);
+}
+
 .breadcrumbs {
     display: inline;
     float: left;
@@ -17,8 +26,7 @@
 }
 
 .container {
-    margin: auto;
-    margin-bottom: 98px;
+    margin: auto auto 98px auto;
     max-width: 1320px;
 }
 
@@ -34,7 +42,7 @@
     margin-left: 10px;
     margin-top: 98px;
     margin-bottom: 48px;
-    font-family: Inter;
+    font-family: 'Inter', serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 500;
